Refactor: se actualizaron los menus de todos los navbar

--- a/front/quienes-somos.html
+++ b/front/quienes-somos.html
@@ -40,10 +40,10 @@
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="./mate.html">Mates</a></li>
-            <li><a class="dropdown-item" href="./bombilla_mate.html">Bombillas</a></li>
+            <li><a class="dropdown-item" href="./bombilla-mate.html">Bombillas</a></li>
             <li><a class="dropdown-item" href="./yerbas.html">Yerbas</a></li>
             <li><a class="dropdown-item" href="./agregados.html">Agregados al Mate</a></li>
-            <li><a class="dropdown-item" href="./kits_completos_para_principiantes.html">Kits completos para principiantes</a></li>
+            <li><a class="dropdown-item" href="./kits-completos-para-principiantes.html">Kits completos para principiantes</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="./tienda.html">Todos los productos</a></li>
           </ul>
