--- a/front/contacto.html
+++ b/front/contacto.html
@@ -43,14 +43,14 @@
           <a class="nav-link active" href="./contacto.html">Contacto</a>
         </li>
       </ul>
-      <form class="d-flex" role="search">
+      <form class="d-flex" role="search" action="./buscar.html" method="GET">
         <div class="input-group">
           <span class="input-group-text bg-white border-end-0">
             <i class="bi bi-search"></i>
           </span>
           <input 
             type="search" 
-            name="buscar" 
+            name="q" 
             class="form-control border-start-0" 
             placeholder="Buscar..." 
             aria-label="Buscar" 
