Bugfix: se solucionan los problemas mencionados en la devolución del front

--- a/front/agregados.html
+++ b/front/agregados.html
@@ -136,7 +136,7 @@
   <div class="col">
     <div class="card h-100">
       <a href="./producto.html" class="text-decoration-none text-dark">
-        <img src="./img/agregados/pack de agregados.jpg" class="card-img-top" alt="Pack Blend Malaya (Menta, Limón, Jengibre y Pétalos de Rosa)">
+        <img src="./img/agregados/pack-de-agregados.jpg" class="card-img-top" alt="Pack Blend Malaya (Menta, Limón, Jengibre y Pétalos de Rosa)">
         <div class="card-body">
           <h5 class="card-title">Pack Blend Malaya (Menta, Limón, Jengibre y Pétalos de Rosa)</h5>
           <p class="card-text">Combinación de hierbas refrescantes y florales que equilibran frescura y aroma. Ideal para mates suaves y aromáticos.</p>
@@ -157,7 +157,7 @@
   <div class="col">
     <div class="card h-100">
       <a href="./producto.html" class="text-decoration-none text-dark">
-        <img src="./img/agregados/pack de agregados2.jpg" class="card-img-top" alt="Pack Blend Malaya (Boldo, Cedrón, Caléndula y Canela)">
+        <img src="./img/agregados/pack-de-agregados2.jpg" class="card-img-top" alt="Pack Blend Malaya (Boldo, Cedrón, Caléndula y Canela)">
         <div class="card-body">
           <h5 class="card-title">Pack Blend Malaya (Boldo, Cedrón, Caléndula y Canela)</h5>
           <p class="card-text">Mezcla digestiva con notas especiadas y herbales. Excelente para un mate relajante.</p>
