--- a/front/contacto.html
+++ b/front/contacto.html
@@ -87,23 +87,23 @@
       <!-- Nombre y Apellido en la misma fila -->
       <div class="col-md-6">
         <label for="inputNombre" class="form-label">Nombre</label>
-        <input type="text" class="form-control" id="inputNombre" name="nombre" maxlength="200" placeholder="Tu nombre" required>
+        <input type="text" class="form-control" id="inputNombre" name="nombre" maxlength="50" placeholder="Tu nombre" required>
       </div>
       <div class="col-md-6">
         <label for="inputApellido" class="form-label">Apellido</label>
-        <input type="text" class="form-control" id="inputApellido" name="apellido" maxlength="200" placeholder="Tu apellido" required>
+        <input type="text" class="form-control" id="inputApellido" name="apellido" maxlength="50" placeholder="Tu apellido" required>
       </div>
 
       <!-- Email -->
       <div class="col-12">
         <label for="inputEmail" class="form-label">Email</label>
-        <input type="email" class="form-control" id="inputEmail" name="email" maxlength="200" placeholder="ejemplo@correo.com" required>
+        <input type="email" class="form-control" id="inputEmail" name="email" maxlength="50" placeholder="ejemplo@correo.com" required>
       </div>
 
       <!-- Asunto -->
       <div class="col-12">
         <label for="inputAsunto" class="form-label">Asunto</label>
-        <input type="text" class="form-control" id="inputAsunto" name="asunto" maxlength="200" placeholder="Escribe el asunto" required>
+        <input type="text" class="form-control" id="inputAsunto" name="asunto" maxlength="50" placeholder="Escribe el asunto" required>
       </div>
 
       <!-- Mensaje -->
@@ -116,6 +116,7 @@
       <input type="hidden" name="_subject" value="Nuevo mensaje desde El Club del Mate">
       <input type="hidden" name="_captcha" value="false">
       <input type="hidden" name="_next" value="./gracias.html">
+      <input type="text" name="_honey" style="display:none">
 
       <!-- Botón -->
       <div class="col-12">
