--- a/front/gracias.html
+++ b/front/gracias.html
@@ -68,7 +68,7 @@
 </nav>
 
 
-<main>
+<main class="flex-grow-1 text-center mt-5">
   <div class="text-center">
     <h2>¡Gracias por tu contacto!</h2>
     <p class="text-muted">
