--- a/front/kits-completos-para-principiantes.html
+++ b/front/kits-completos-para-principiantes.html
@@ -73,7 +73,7 @@
   <div class="col">
     <div class="card h-100">
       <a href="./producto.html" class="text-decoration-none text-dark">
-        <img src="./img/kits completos de mate/kits completos de mate1.jpeg" class="card-img-top" alt="Kit Matero Clásico con Mochila Verde">
+        <img src="./img/kits-completos-de-mate/kits-completos-de-mate1.jpeg" class="card-img-top" alt="Kit Matero Clásico con Mochila Verde">
         <div class="card-body">
           <h5 class="card-title">Kit Matero Clásico con Mochila Verde</h5>
           <p class="card-text">Incluye termo de acero, mate térmico, bombilla y bolso matero reforzado con bolsillos. Ideal para llevar a todos lados.</p>
@@ -94,7 +94,7 @@
   <div class="col">
     <div class="card h-100">
       <a href="./producto.html" class="text-decoration-none text-dark">
-        <img src="./img/kits completos de mate/kits completos de mate2.jpeg" class="card-img-top" alt="Kit Matero Ejecutivo Negro">
+        <img src="./img/kits-completos-de-mate/kits-completos-de-mate2.jpeg" class="card-img-top" alt="Kit Matero Ejecutivo Negro">
         <div class="card-body">
           <h5 class="card-title">Kit Matero Ejecutivo Negro</h5>
           <p class="card-text">Con estuche rígido elegante, termo de acero inoxidable, mate forrado, bombilla y dos yerberos metálicos.</p>
@@ -115,7 +115,7 @@
   <div class="col">
     <div class="card h-100">
       <a href="./producto.html" class="text-decoration-none text-dark">
-        <img src="./img/kits completos de mate/kits completos de mate3.jpeg" class="card-img-top" alt="Kit Matero Marrón con Estuche de Cuero">
+        <img src="./img/kits-completos-de-mate/kits-completos-de-mate3.jpeg" class="card-img-top" alt="Kit Matero Marrón con Estuche de Cuero">
         <div class="card-body">
           <h5 class="card-title">Kit Matero Marrón con Estuche de Cuero</h5>
           <p class="card-text">Incluye bolso grande de cuero ecológico, termo de acero, mate de madera, bombilla y yerberos de acero.</p>
@@ -136,7 +136,7 @@
   <div class="col">
     <div class="card h-100">
       <a href="./producto.html" class="text-decoration-none text-dark">
-        <img src="./img/kits completos de mate/kits completos de mate4.jpeg" class="card-img-top" alt="Kit Matero Edición Mosaico">
+        <img src="./img/kits-completos-de-mate/kits-completos-de-mate4.jpeg" class="card-img-top" alt="Kit Matero Edición Mosaico">
         <div class="card-body">
           <h5 class="card-title">Kit Matero Edición Mosaico</h5>
           <p class="card-text">Con bolso exclusivo en diseño de mosaicos, termo, yerberos, mate forrado en acero y bombilla. Muy vistoso y moderno.</p>
@@ -157,7 +157,7 @@
   <div class="col">
     <div class="card h-100">
       <a href="./producto.html" class="text-decoration-none text-dark">
-        <img src="./img/kits completos de mate/kits completos de mate5.jpeg" class="card-img-top" alt="Kit Matero Mochila Outdoor">
+        <img src="./img/kits-completos-de-mate/kits-completos-de-mate5.jpeg" class="card-img-top" alt="Kit Matero Mochila Outdoor">
         <div class="card-body">
           <h5 class="card-title">Kit Matero Mochila Outdoor</h5>
           <p class="card-text">Mochila reforzada con termo, yerbero, mate de acero inoxidable y bombilla. Ideal para viajes y camping.</p>
@@ -178,7 +178,7 @@
   <div class="col">
     <div class="card h-100">
       <a href="./producto.html" class="text-decoration-none text-dark">
-        <img src="./img/kits completos de mate/kits completos de mate6.jpeg" class="card-img-top" alt="Kit Matero Minimalista Negro">
+        <img src="./img/kits-completos-de-mate/kits-completos-de-mate6.jpeg" class="card-img-top" alt="Kit Matero Minimalista Negro">
         <div class="card-body">
           <h5 class="card-title">Kit Matero Minimalista Negro</h5>
           <p class="card-text">Incluye bolso matero estilo bandolera, mate de acero inoxidable, termo negro y bombilla de acero. Diseño moderno y simple.</p>
@@ -199,7 +199,7 @@
   <div class="col">
     <div class="card h-100">
       <a href="./producto.html" class="text-decoration-none text-dark">
-        <img src="./img/kits completos de mate/kits completos de mate7.jpeg" class="card-img-top" alt="Kit Matero Pauny con Mate Amarillo">
+        <img src="./img/kits-completos-de-mate/kits-completos-de-mate7.jpeg" class="card-img-top" alt="Kit Matero Pauny con Mate Amarillo">
         <div class="card-body">
           <h5 class="card-title">Kit Matero Pauny con Mate Amarillo</h5>
           <p class="card-text">Termo de acero verde, mate de calabaza pintado de amarillo, bombilla y bolso matero con logo Pauny.</p>
@@ -220,7 +220,7 @@
   <div class="col">
     <div class="card h-100">
       <a href="./producto.html" class="text-decoration-none text-dark">
-        <img src="./img/kits completos de mate/kits completos de mate8.jpeg" class="card-img-top" alt="Kit Matero Familiar Negro">
+        <img src="./img/kits-completos-de-mate/kits-completos-de-mate8.jpeg" class="card-img-top" alt="Kit Matero Familiar Negro">
         <div class="card-body">
           <h5 class="card-title">Kit Matero Familiar Negro</h5>
           <p class="card-text">Con termo negro, dos yerberos, mate de acero, bombilla y bolso de cuero ecológico. Ideal para compartir en familia.</p>
@@ -241,7 +241,7 @@
   <div class="col">
     <div class="card h-100">
       <a href="./producto.html" class="text-decoration-none text-dark">
-        <img src="./img/kits completos de mate/kits completos de mate9.jpeg" class="card-img-top" alt="Kit Matero Verde Militar Premium">
+        <img src="./img/kits-completos-de-mate/kits-completos-de-mate9.jpeg" class="card-img-top" alt="Kit Matero Verde Militar Premium">
         <div class="card-body">
           <h5 class="card-title">Kit Matero Verde Militar Premium</h5>
           <p class="card-text">Incluye bolso reforzado estilo mochila, termo de acero, yerbero, mate de madera, bombilla y azucarero.</p>
@@ -262,7 +262,7 @@
   <div class="col">
     <div class="card h-100">
       <a href="./producto.html" class="text-decoration-none text-dark">
-        <img src="./img/kits completos de mate/kits completos de mate10.jpeg" class="card-img-top" alt="Kit Matero Premium de Cuero Marrón">
+        <img src="./img/kits-completos-de-mate/kits-completos-de-mate10.jpeg" class="card-img-top" alt="Kit Matero Premium de Cuero Marrón">
         <div class="card-body">
           <h5 class="card-title">Kit Matero Premium de Cuero Marrón</h5>
           <p class="card-text">Contiene mate de calabaza forrado en cuero con virola, bombilla de acero, termo de acero inoxidable y porta mate de cuero.</p>
