--- a/front/producto-kit.html
+++ b/front/producto-kit.html
@@ -75,16 +75,16 @@
       <!-- Contenedor fijo para la imagen principal -->
       <div class="product-img-wrapper mb-3">
         <img id="imagen-principal" 
-             src="./img/kits completos de mate/kits completos de mate9.jpeg" 
+             src="./img/kits-completos-de-mate/kits-completos-de-mate9.jpeg" 
              alt="Kit Matero Verde Militar Premium" 
              class="product-img">
       </div>
       <hr>
       <!-- Miniaturas -->
       <div class="d-flex gap-2 product-img-miniature">
-        <img src="./img/kits completos de mate/kits completos de mate9.jpeg" alt="kit vista 1" class="img-thumbnail miniatura">
-        <img src="./img/kits completos de mate/kits completos de mate8.jpeg" alt="kit vista 2" class="img-thumbnail miniatura">
-        <img src="./img/kits completos de mate/kits completos de mate10.jpeg" alt="kit vista 3" class="img-thumbnail miniatura">
+        <img src="./img/kits-completos-de-mate/kits-completos-de-mate9.jpeg" alt="kit vista 1" class="img-thumbnail miniatura">
+        <img src="./img/kits-completos-de-mate/kits-completos-de-mate8.jpeg" alt="kit vista 2" class="img-thumbnail miniatura">
+        <img src="./img/kits-completos-de-mate/kits-completos-de-mate10.jpeg" alt="kit vista 3" class="img-thumbnail miniatura">
       </div>
     </div>
 
