--- a/front/tienda.html
+++ b/front/tienda.html
@@ -119,7 +119,7 @@
   <div class="col">
     <div class="card h-100">
       <a href="./producto-kit.html" class="text-decoration-none text-dark">
-        <img src="./img/kits completos de mate/kits completos de mate9.jpeg" class="card-img-top" alt="Kit Matero Verde Militar Premium">
+        <img src="./img/kits-completos-de-mate/kits-completos-de-mate9.jpeg" class="card-img-top" alt="Kit Matero Verde Militar Premium">
         <div class="card-body">
           <h5 class="card-title">Kit Matero Verde Militar Premium</h5>
           <p class="card-text">
